--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # Gemini API the key is lables whi
-GEMINI_API_KEY=AIzaSyANmkmr32Amn65JTmAQj77ouhjVVwm2xRA
+GEMINI_API_KEY=paste your API_key here
+
